--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ iOSInjectionProject/
 
 ### custom ###
 *.xcconfig
+.xcuserstate
 
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode,macos
