--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,8 @@ iOSInjectionProject/
 
 ### custom ###
 *.xcconfig
-.xcuserstate
+*.xcuserstate
+*.DS_Store
 
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode,macos
